--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,8 @@
 * add function Attach in TAPASBatch for either Files or OMERO
 * add folder Results in the Dataset for attached files
 * change ?name?  to ?image?
+* create a folder tapas in plugins, mv tapas.txt there
+* use extension tpp for tapas protocols and tpm for tapas menus
 
 --- TAPAS PLUGINS ---
 * EVF layers change parameter to fileName ? (save results and png)
