--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,13 @@
 --- TAPAS CORE ---
-* add function Attach in TAPASBatch for either Files or OMERO
 * add folder Results in the Dataset for attached files
 * change ?name?  to ?image?
 * create a folder tapas in plugins, mv tapas.txt there
-* use extension tpp for tapas protocols and tpm for tapas menus
+* use extension .tpp for tapas protocols and .tpm for tapas menus
 
 --- TAPAS PLUGINS ---
 * EVF layers change parameter to fileName ? (save results and png)
 * EVF layers ask save  png then change name .csv --> .png (if no csv add .png) ?
 
+--- 0.6.3
+* add function Attach in TAPASBatchUtils for either Files or OMERO, DONE 0.6.3
+* renamed TapasProcessor to TapasProcessorIJ
